--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root{
+    --green: #66a167;
+    --dark-brown: #935116;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -34,19 +39,103 @@ body{
     bottom: 0;
 }
 
-.layer-1{
-    height: 450px;
-    left: 90px;
+.bunny{
+    width: 60px;
 }
 
-.bunny{
+.layer-1{
+    height: 450px;
+    left: 70px;
+}
+
+.left-ear, .right-ear{
+    position: absolute;
     background-color: white;
-    width: 60px;
+    border-radius: 90%;
+    height: 50px;
+    width: 15px;
+}
+
+.left-ear{
+    left: 5px;
+}
+
+.right-ear{
+    right: 5px;
+}
+
+.ear-inner{
+    position: absolute;
+    width: 8px;
+    height: 40px;
+    background-color: pink;
+    border-radius: 90%;
+    bottom: 0;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+}
+
+.head{
+    position: absolute;
+    width: 100%;
+    height: 80px;
+    background-color: white;
+    border-radius: 50%;
+    top: 28px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;    
+}
+
+.eye{
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background-color: gray;
+    top: 10px;
+}
+
+.eye-left{
+    left: 16px;
+}
+
+.eye-right{
+    right: 16px;
 }
 
 .layer-2{
     height: 450px;
     right: 60px;
+}
+
+.wall{
+    background-color: #ca6f1e;
+    bottom: 0;
+    box-shadow: 0 24px 24px rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+.grass{
+    position: absolute;
+    top: 0;
+    background-color: var(--green);
+    width: 100%;
+    height: 30px;
+}
+
+.zigzag{
+    width: 100%;
+    height: 20px;
+    position: absolute;
+    top: 20px;
+    background: linear-gradient(135deg, var(--dark-brown) 25%, transparent 25%) -50px 0,
+    linear-gradient(-135deg, var(--dark-brown) 25%, transparent 25%) -50px 0,
+    linear-gradient(45deg, var(--dark-brown) 25%, transparent 25%),
+    linear-gradient(-45deg, var(--dark-brown) 25%, transparent 25%);
+    background-size: 20px 20px;
 }
 
 .layer-3{
@@ -55,13 +144,6 @@ body{
     left: 0;
     right: 0;
     margin: 0 auto;
-}
-
-.wall{
-    background-color: wheat;
-    bottom: 0;
-    box-shadow: 0 24px 24px rgba(0, 0, 0, 0.5);
-    border-radius: 20px;
 }
 
 .layer-4{
@@ -82,29 +164,76 @@ body{
 
 .layer-7{
     width: 150px;
-    height: 160px;
+    height: 150px;
     right: 0;
 }
 
 .bush{
     border-radius: 50px;
-    width: 100px;
-    height: 100px;
+    width: 76px;
+    height: 120px;
 }
 
 .layer-8{
     left: 0;
     right: 0;
     margin: 0 auto;
-    background-color: green;
+    background-color: var(--green);
+    bottom: -20px;
+}
+
+.layer-8::after {
+    content: "";
+    width: 90px;
+    height: 110px;
+    background-color: var(--green);
+    border-radius: 50%;
+    position: absolute;
+    left: 60px;
+    top: 25px;
+}
+
+.layer-8::before {
+    content: "";
+    width: 90px;
+    height: 110px;
+    background-color: var(--green);
+    border-radius: 50%;
+    position: absolute;
+    right: 60px;
+    top: 25px;
 }
 
 .layer-9{
     background-color: white;
-    left: 0;
+    left: -10px;
+    bottom: -30px;
+}
+
+.layer-9::after {
+    content: "";
+    width: 70px;
+    height: 90px;
+    background-color: white;
+    border-radius: 70%;
+    position: absolute;
+    left: 50px;
+    top: 45px;
 }
 
 .layer-10{
     background-color: white;
     right: 0;
+    bottom: -30px;
+}
+
+.layer-10::before {
+    content: "";
+    width: 70px;
+    height: 90px;
+    background-color: white;
+    border-radius: 70%;
+    position: absolute;
+    right: 50px;
+    top: 45px;
 }
