--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root{
     --green: #66a167;
     --dark-brown: #935116;
+    --light-brown: #ca6f1e;
 }
 
 *{
@@ -41,11 +42,14 @@ body{
 
 .bunny{
     width: 60px;
+    animation: hide infinite linear;
 }
 
 .layer-1{
     height: 450px;
     left: 70px;
+    animation-duration: 2s;
+    animation-direction: alternate;
 }
 
 .left-ear, .right-ear{
@@ -108,6 +112,8 @@ body{
 .layer-2{
     height: 450px;
     right: 60px;
+    animation-duration: 1.5s;
+    animation-direction: alternate-reverse;
 }
 
 .wall{
@@ -127,15 +133,16 @@ body{
 }
 
 .zigzag{
-    width: 100%;
-    height: 20px;
     position: absolute;
     top: 20px;
-    background: linear-gradient(135deg, var(--dark-brown) 25%, transparent 25%) -50px 0,
-    linear-gradient(-135deg, var(--dark-brown) 25%, transparent 25%) -50px 0,
-    linear-gradient(45deg, var(--dark-brown) 25%, transparent 25%),
-    linear-gradient(-45deg, var(--dark-brown) 25%, transparent 25%);
+    width: 100%;
+    height: 20px;
+    background: linear-gradient(135deg, var(--green) 25%, transparent 25%) -50px 0,
+    linear-gradient(225deg, var(--green) 25%, transparent 25%) -50px 0,
+    linear-gradient(315deg, var(--light-brown) 25%, transparent 25%),
+    linear-gradient(45deg, var(--light-brown) 25%, transparent 25%);
     background-size: 20px 20px;
+    background-color: var(--dark-brown);
 }
 
 .layer-3{
@@ -149,6 +156,8 @@ body{
 .layer-4{
     height: 300px;
     left: 20px;
+    animation-duration: 1.5s;
+    animation-direction: alternate-reverse;
 }
 
 .layer-5{
@@ -160,6 +169,8 @@ body{
 .layer-6{
     height: 200px;
     right: 36px;
+    animation-duration: 2.6s;
+    animation-direction: alternate;
 }
 
 .layer-7{
@@ -236,4 +247,14 @@ body{
     position: absolute;
     right: 50px;
     top: 45px;
+}
+
+@keyframes hide {
+    from{
+        transform: translateY(-30px);
+    }
+
+    to{
+        transform: translateY(60px);
+    }
 }
