--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body{
     place-items: center;
     height: 100vh;
     width: 100vw;
-
 }
 
 .background {
@@ -27,12 +26,37 @@ body{
     background-color: lightcyan;
     box-shadow: 0 20px 32px rgba(0, 0, 0, 0.5);
     overflow: hidden;
+    counter-reset: game;
 }
 
 .title{
-    padding: 12px;
+    padding: 24px;
     text-align: center;
     margin-bottom: 20px;
+    color: var(--dark-brown);
+}
+
+.title h1{
+    font-family: "Henny Penny", serif;
+    font-size: 1.2rem;
+}
+
+.title h1::first-letter{
+    font-size: 2rem;
+}
+
+.title p{
+    font-size: 1rem;
+    font-weight: bold;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.title p::after{
+    content: counter(game);
+}
+
+input:checked{
+    counter-increment: game;
 }
 
 .layer{
@@ -40,9 +64,18 @@ body{
     bottom: 0;
 }
 
+.layer input[type=checkbox]{
+    position: absolute;
+    z-index: 1;
+    appearance: none;
+    cursor: pointer;
+    width: 100%;
+    height: 80px;
+}
+
 .bunny{
     width: 60px;
-    animation: hide infinite linear;
+    animation: hide infinite ease-in-out;
 }
 
 .layer-1{
@@ -99,6 +132,7 @@ body{
     border-radius: 50%;
     background-color: gray;
     top: 10px;
+    animation: blink 2s linear infinite;
 }
 
 .eye-left{
@@ -117,7 +151,7 @@ body{
 }
 
 .wall{
-    background-color: #ca6f1e;
+    background-color: var(--light-brown);
     bottom: 0;
     box-shadow: 0 24px 24px rgba(0, 0, 0, 0.5);
     border-radius: 20px;
@@ -156,8 +190,9 @@ body{
 .layer-4{
     height: 300px;
     left: 20px;
-    animation-duration: 1.5s;
+    animation-duration: 1.2s;
     animation-direction: alternate-reverse;
+    animation-delay: 600ms;
 }
 
 .layer-5{
@@ -169,7 +204,7 @@ body{
 .layer-6{
     height: 200px;
     right: 36px;
-    animation-duration: 2.6s;
+    animation-duration: 2.2s;
     animation-direction: alternate;
 }
 
@@ -256,5 +291,19 @@ body{
 
     to{
         transform: translateY(60px);
+    }
+}
+
+@keyframes blink{
+    0%{
+        transform: scaleY(1);
+    }
+
+    5%{
+        transform: scaleY(.2);
+    }
+
+    10%{
+        transform: scaleY(1);
     }
 }
